# asset_manager

./: Cargo.toml  README.md
src/: file_finder.rs  gui.rs  main.rs
src/models/: file_items.rs  graphic_file.rs  gui.rs  mod.rs
src/ui/: code_editor.rs  editor.rs  gallery.rs  gui.rs  help.rs  mod.rs  settings.rs  sidebar_left.rs  sidebar_right.rs  svg_overview.rs  toolbar.rs
src/ui/gallery/: grid.rs  header.rs  helpers.rs  items.rs  mod.rs
src/ui/popups/: delete_file.rs  gallery_options.rs  mod.rs  rename_file.rs
src/ui/sidebar_right/: code_view.rs  colors.rs  mod.rs  preview.rs
src/ui/views/: code_editor.rs  help.rs  mod.rs
src/ui/views/gallery/: grid.rs  header.rs  helpers.rs  items.rs  mod.rs
src/utils/: config.rs  file_actions.rs  file_finder.rs  font_loader.rs  mod.rs  svg_parser.rs
