[package]
name = "asset_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = {version= "0.29", features = ["all_loaders"]}
scan_dir = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.145"
arboard = "3.4"
svgtypes = "0.13.0"
rfd = "0.14"