[package]
name = "asset_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = {version= "0.33", features = ["all_loaders"]}
scan_dir = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.145"
arboard = "3.4"
svgtypes = "0.13.0"
rfd = "0.14"

# Use the latest from git
egui_code_editor = { git = "https://github.com/p4ymak/egui_code_editor", branch = "main" }
regex = "1.12.2"